[tool.poetry]
name = "jupyter-blog"
version = "0.1.0"
description = "Code for jupyter blog"
authors = ["drx"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
